--- a/site/docs/api.mdx
+++ b/site/docs/api.mdx
@@ -6,7 +6,7 @@ import ApiCard from '@site/src/components/ApiCard';
   <div className="grid grid-cols-1 desktop:grid-cols-2 gap-4 pt-6">
     <ApiCard
       name="tbDEX SDK"
-      description="A messaging protocol to discover liquidity and communicate with Participating Financial Instutitions during transactions."
+      description="A messaging protocol that enables wallet applications to communicate with Participating Financial Instutitions to discover and obtain liquidity."
       links={[
         {"js": "https://tbd54566975.github.io/tbdex-js/index.html"},
         {"kt": "https://tbd54566975.github.io/tbdex-kt/"}
