--- a/site/docs/web5/_quickstart-03-create-did.mdx
+++ b/site/docs/web5/_quickstart-03-create-did.mdx
@@ -12,7 +12,7 @@ The `Web5` class is an isolated API object for doing all things Web5. The `conne
 In `index.js` below the import statement, create a new instance of `Web5`:
 <CodeSnippet functionName="didCreate" />
 
-This Web5 instance is what you'll use to access the other objects of Web5 such as `did` and `dwn`. Within the connect function we’re using `ion` as the DID method. Learn more about ION and other [DID methods](/docs/web5/learn/decentralized-identifiers#methods).
+This Web5 instance is what you'll use to access the other objects of Web5 such as `did` and `dwn`. Within the connect function we’re using `ion` as the DID method. Learn more [DID methods](/docs/web5/learn/decentralized-identifiers#methods).
 
 :::info
 Web5 is split into three main top-level objects:
