--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -5,11 +5,12 @@ sidebar_position: 2
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeSnippet from '@site/src/components/CodeSnippet';
-import installJs from '!!raw-loader!@site/snippets/tbdex/pfi/installJs.snippet.bash'
-import installKtGradle from '!!raw-loader!@site/snippets/tbdex/pfi/installKt.snippet.gradle'
-import installKtPom from '!!raw-loader!@site/snippets/tbdex/pfi/installKtPom.snippet.xml'
-import importJs from '!!raw-loader!@site/snippets/tbdex/pfi/overviewImportJs.snippet.js'
-import importKt from '!!raw-loader!@site/snippets/tbdex/pfi/overviewImportKt.snippet.kt'
+import BreadcrumbTab from '@site/src/components/BreadcrumbTab';
+import installJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiSdkInstallJs.snippet.bash'
+import installKtGradle from '!!raw-loader!@site/snippets/tbdex/pfi/pfiSdkInstallGradle.snippet.gradle'
+import installKtPom from '!!raw-loader!@site/snippets/tbdex/pfi/pfiSdkInstallPom.snippet.xml'
+import importJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiSdkImportJs.snippet.js'
+import importKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiSdkImportKt.snippet.kt'
 
 
 # Required SDKs
@@ -28,11 +29,13 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
   <TabItem label="JavaScript" value="JavaScript">
     <CodeSnippet snippet={installJs} />
   </TabItem>
-  <TabItem label="Kotlin (Gradle)" value="Kotlin">
-    <CodeSnippet snippet={installKtGradle} />
-  </TabItem>
-  <TabItem label="Kotlin (Maven)" value="maven">
-    <CodeSnippet snippet={installKtPom} />
+  <TabItem label="Kotlin" value="Kotlin">
+    <BreadcrumbTab
+      snippetMappings={{
+        'Gradle': installKtGradle,
+        'Maven': installKtPom
+      }}
+    />
   </TabItem>
 </Tabs>
 
