--- a/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
+++ b/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
@@ -1,24 +1,22 @@
 ---
+title: Structuring a PFI App
 sidebar_position: 5
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import CodeSnippet from '@site/src/components/CodeSnippet';
-import configJs from '!!raw-loader!@site/snippets/tbdex/pfi/configJs.snippet.js'
-import configKt from '!!raw-loader!@site/snippets/tbdex/pfi/configKt.snippet.kt'
-import serverRoutesJs from '!!raw-loader!@site/snippets/tbdex/pfi/serverRoutesJs.snippet.js'
-import serverRoutesKt from '!!raw-loader!@site/snippets/tbdex/pfi/serverRoutesKt.snippet.kt'
-import serverStartJs from '!!raw-loader!@site/snippets/tbdex/pfi/serverStartJs.snippet.js'
-import serverStartKt from '!!raw-loader!@site/snippets/tbdex/pfi/serverStartKt.snippet.kt'
-import writeJs from '!!raw-loader!@site/snippets/tbdex/pfi/writeJs.snippet.js'
-import writeKt from '!!raw-loader!@site/snippets/tbdex/pfi/writeKt.snippet.kt'
-import readOfferingsJs from '!!raw-loader!@site/snippets/tbdex/pfi/readOfferingsJs.snippet.js'
-import readOfferingsKt from '!!raw-loader!@site/snippets/tbdex/pfi/readOfferingsKt.snippet.kt'
-import writeOfferingsJs from '!!raw-loader!@site/snippets/tbdex/pfi/writeOfferingsJs.snippet.js'
-import writeOfferingsKt from '!!raw-loader!@site/snippets/tbdex/pfi/writeOfferingsKt.snippet.kt'
+<LanguageSwitcher languages="JavaScript, Kotlin"/>
 
-# Structuring a PFI App
+import configJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewConfigJs.snippet.js'
+import configKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewConfigKt.snippet.kt'
+import serverRoutesJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewServerRoutesJs.snippet.js'
+import serverRoutesKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewServerRoutesKt.snippet.kt'
+import serverStartJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewServerStartJs.snippet.js'
+import serverStartKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewServerStartKt.snippet.kt'
+import writeJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewWriteJs.snippet.js'
+import writeKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewWriteKt.snippet.kt'
+import readOfferingsJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewReadOfferingsJs.snippet.js'
+import readOfferingsKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewReadOfferingsKt.snippet.kt'
+import writeOfferingsJs from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewWriteOfferingsJs.snippet.js'
+import writeOfferingsKt from '!!raw-loader!@site/snippets/tbdex/pfi/pfiOverviewWriteOfferingsKt.snippet.kt'
 
 Every PFI on the tbDEX network is required to handle its end of the responsibilities as part of each [Message Type](/docs/tbdex/message-types). The tbDEX SDK is organized in such a way that there are three key components you'll be required to implement:
 
@@ -38,37 +36,28 @@ Your main server entrypoint should fulfill the following responsibilities:
 
 To begin, you’ll want to configure your server with the required exchange and offerings API providers (the details of those API providers will be in the sections below):
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={configJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={configKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: configJs, language: 'JavaScript'},
+    { snippetContent: configKt, language: 'Kotlin'}
+  ]} />
 
 The [message types](/docs/tbdex/message-types) that are sent from Wallets to PFIs are: `RFQ`, `Order`, and `Close`. 
 As a result, you’ll want to ensure that your PFI is programmed to accept those messages and create appropriate messages in response:
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={serverRoutesJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={serverRoutesKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: serverRoutesJs, language: 'JavaScript'},
+    { snippetContent: serverRoutesKt, language: 'Kotlin'}
+  ]} />
 
 With your routes configured, set your server to begin listening:
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={serverStartJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={serverStartKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: serverStartJs, language: 'JavaScript'},
+    { snippetContent: serverStartKt, language: 'Kotlin'}
+  ]} />
 
 Now your server is configured with the appropriate routing setup.
 
@@ -86,14 +75,11 @@ Using the sample code above as reference, the submission of `RFQ`, `Order`, or `
 As a PFI developer, you’ll be responsible for designing your own data storage and provider to access your data. 
 Assuming a generic `dataProvider` class serves as your PFI’s means of accessing your Exchange data, here's an example of a `write()` implementation:
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={writeJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={writeKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: writeJs, language: 'JavaScript'},
+    { snippetContent: writeKt, language: 'Kotlin'}
+  ]} />
 
 After writing an `RFQ` to the database, you can [create a Quote](/docs/tbdex/pfi/creating-quotes). 
 Similarly, after writing an `Order` to your database, you’ll want to ensure you properly [process that Order](/docs/tbdex/pfi/processing-orders).
@@ -106,24 +92,18 @@ The `Offerings` API is the set of methods that deals with reading and writing an
 Although the Offerings API isn’t directly exposed in the main server entrypoint, it is still used to fetch and write offerings to your PFI's database. 
 Here's an example of how to get offerings as specified by the `OfferingsApi` interface:
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={readOfferingsJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={readOfferingsKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: readOfferingsJs, language: 'JavaScript'},
+    { snippetContent: readOfferingsKt, language: 'Kotlin'}
+  ]} />
 
 Additionally, you could write `Offerings` into your database:
 
-<Tabs>
-  <TabItem label="JavaScript" value="JavaScript">
-    <CodeSnippet snippet={writeOfferingsJs} />
-  </TabItem>
-  <TabItem label="Kotlin" value="Kotlin">
-    <CodeSnippet snippet={writeOfferingsKt} />
-  </TabItem>
-</Tabs>
+<Shnip snippets={
+  [
+    { snippetContent: writeOfferingsJs, language: 'JavaScript'},
+    { snippetContent: writeOfferingsKt, language: 'Kotlin'}
+  ]} />
 
 By implementing the `getOffering()` and `getOfferings()` methods, you'll allow Wallets to get a specific Offering they'd be interested in, or query all your Offerings, respectively. The convenience of the tbDEX SDK is that you aren't required to actually write an API endpoint yourself to handle interfacing with Wallets as the SDK handles it all for you.
