--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -6,8 +6,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeSnippet from '@site/src/components/CodeSnippet';
 import installJs from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkInstallJs.snippet.bash'
-import installKtGradle from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkInstallGradle.snippet.gradle'
-import installKtPom from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkInstallPom.snippet.xml'
+import walletSdkInstallGradle from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkInstallGradle.snippet.gradle'
+import walletSdkInstallPom from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkInstallPom.snippet.xml'
 import importJs from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkImportJs.snippet.js'
 import importKt from '!!raw-loader!@site/snippets/tbdex/wallet/walletSdkImportKt.snippet.kt'
 
