--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -32,8 +32,8 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
   <TabItem label="Kotlin" value="Kotlin">
     <BreadcrumbTab
       snippetMappings={{
-        'Gradle': pfiSdkInstallGradle,
-        'Maven': pfiSdkInstallPom
+        'build.gradle': pfiSdkInstallGradle,
+        'pom.xml': pfiSdkInstallPom
       }}
     />
   </TabItem>
