update wallet page

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -26,7 +26,7 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
 ## Install SDKs
 
 <Tabs groupId="language">
-  <TabItem label="JavaScript" value="JavaScript">
+  <TabItem label="JavaScript" value="JavaScript" language="bash">
     <CodeSnippet snippet={pfiSdkInstallJs} />
   </TabItem>
   <TabItem label="Kotlin" value="Kotlin">
