adding notes, fixing links

--- a/site/docs/tbdex/pfi/onboarding.mdx
+++ b/site/docs/tbdex/pfi/onboarding.mdx
@@ -26,4 +26,7 @@ To create a DID and identify yourself as a PFI, use the `web5/dids` package:
   </TabItem>
 </Tabs>
 
-Note that the value for `serviceEndpoint` should be the URL to your PFI's service entry.
+:::note Notes
+* The value for `serviceEndpoint` should be the URL to your PFI's service entry.
+* `keyManager` is an object representing your [Key Management Service](/docs/web5/build/decentralized-identifiers/key-management)
+:::
