--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -18,9 +18,9 @@ import importKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotl
 To implement and operate as a Wallet on a tbDEX network, you’ll need to use the following SDKs:
 
 
-* [**web5/dids**](https://www.npmjs.com/package/@web5/dids) - Enables the creation of [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers) for your customers and perform any other required cryptographic functions, you can use the DIDs package.
-* [**web5/credentials**](https://www.npmjs.com/package/@web5/credentials) - Enable the presentation of [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) to PFIs on your customers' behalf. You may also want to verify that the PFIs you wish to engage with have certain credentials.
-* [**tbdex/client**](https://www.npmjs.com/package/@tbdex/http-client) - Enables your application to send tbDEX messages to PFIs.
+* **web5/dids** - Enables the creation of [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers) for your customers and perform any other required cryptographic functions, you can use the DIDs package.
+* **web5/credentials** - Enable the presentation of [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) to PFIs on your customers' behalf. You may also want to verify that the PFIs you wish to engage with have certain credentials.
+* **tbdex/client** - Enables your application to send tbDEX messages to PFIs.
 
 ## Install SDKs
 
